fixed clipping issue with really long task names and detailsbar

--- a/src/component-styles/details-bar.css
+++ b/src/component-styles/details-bar.css
@@ -120,7 +120,7 @@
     /* relative pos for children elements */
     position:relative;
 }
-#goal-box label input{
+#goal-box label textarea{
     cursor: pointer;
 
     /* positioning */
